Added MFA and Account Linking with multiple auth providers (#39)
* Added Multi Factor Authentication and Account Linking with multiple auth providers
* Added CSRF protection for all routes
* Packages Updated
* Resolved some auth bugs
* Added reauthentication modal

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_EMULATOR=true
 IS_CI=true
+CSRF_MOCK_TOKEN=MOCKCSRFTOKEN
 
 GCLOUD_PROJECT=demo-makerkit
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=demo-makerkit
@@ -27,4 +28,3 @@ USER_PASSWORD=testingpassword
 ENABLE_STRIPE_TESTING=false
 
 STRIPE_WEBHOOK_SECRET=
-
