--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-firebase-saas-kit",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "",
   "private": true,
   "sideEffects": false,
@@ -35,19 +35,20 @@
     "killports": "sh scripts/kill-ports.sh"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.10",
+    "@headlessui/react": "^1.7.1",
+    "@heroicons/react": "^2.0.11",
     "@mdx-js/mdx": "^2.1.3",
     "@sentry/node": "^7.12.1",
     "@sentry/react": "^7.12.1",
     "@sentry/tracing": "^7.12.1",
     "@tippyjs/react": "^4.2.6",
-    "classnames": "2.3.1",
-    "date-fns": "2.29.2",
+    "classnames": "2.3.2",
+    "csrf": "^3.1.0",
+    "date-fns": "2.29.3",
     "feed": "^4.2.2",
     "firebase": "^9.9.4",
     "firebase-admin": "^11.0.1",
-    "heroicons": "2.0.10",
+    "heroicons": "2.0.11",
     "minisearch": "^5.0.0",
     "mjml-react": "^2.0.8",
     "next": "^12.3.0",
@@ -60,33 +61,33 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-epic-spinners": "^0.5.0",
-    "react-hook-form": "^7.34.2",
-    "react-hot-toast": "^2.3.0",
+    "react-hook-form": "^7.35.0",
+    "react-hot-toast": "^2.4.0",
     "reactfire": "^4.2.2",
     "sharp": "^0.31.0",
     "stripe": "^10.8.0",
-    "zod": "^3.19.0"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.12.2",
     "@next/bundle-analyzer": "^12.3.0",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.0.2",
     "@types/mjml-react": "^2.0.6",
-    "@types/node": "^18.7.16",
-    "@types/nodemailer": "^6.4.5",
-    "@types/react": "^18.0.18",
+    "@types/node": "^18.7.18",
+    "@types/nodemailer": "^6.4.6",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@types/sharp": "^0.30.5",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "autoprefixer": "^10.4.8",
-    "cypress": "^10.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "autoprefixer": "^10.4.10",
+    "cypress": "^10.8.0",
     "dotenv": "^16.0.2",
-    "eslint": "^8.23.0",
+    "eslint": "^8.23.1",
     "eslint-config-next": "12.3.0",
     "gray-matter": "4.0.3",
     "mjml": "^4.13.0",
-    "next-sitemap": "^3.1.21",
+    "next-sitemap": "^3.1.22",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
