--- a/.env.development
+++ b/.env.development
@@ -9,6 +9,7 @@ NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=127.0.0.1
 NEXT_PUBLIC_FIRESTORE_EMULATOR_PORT=8080
 NEXT_PUBLIC_FIREBASE_AUTH_EMULATOR_PORT=9099
 NEXT_PUBLIC_FIREBASE_STORAGE_EMULATOR_PORT=9199
+NEXT_PUBLIC_REQUIRE_EMAIL_VERIFICATION=false
 
 # Change this with your project's APP ID
 NEXT_PUBLIC_FIREBASE_APP_ID=1:981813564016:web:f13148231721fcd0ee5ab5
