--- a/.env.production.template
+++ b/.env.production.template
@@ -7,6 +7,7 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_SITE_URL=
 NEXT_PUBLIC_APPCHECK_KEY=
+NEXT_PUBLIC_REQUIRE_EMAIL_VERIFICATION=false
 
 FIREBASE_CLIENT_EMAIL=
 GCLOUD_PROJECT=
