--- a/package.json
+++ b/package.json
@@ -46,21 +46,21 @@
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-select": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.0.3",
-    "@sentry/node": "^7.34.0",
-    "@sentry/react": "^7.34.0",
-    "@sentry/tracing": "^7.34.0",
+    "@sentry/node": "^7.36.0",
+    "@sentry/react": "^7.36.0",
+    "@sentry/tracing": "^7.36.0",
     "classnames": "2.3.2",
     "csrf": "^3.1.0",
     "cva": "npm:class-variance-authority@^0.4.0",
     "date-fns": "2.29.3",
     "feed": "^4.2.2",
-    "firebase": "^9.16.0",
+    "firebase": "9.16.0",
     "firebase-admin": "^11.5.0",
     "heroicons": "2.0.14",
     "minisearch": "^6.0.0",
     "mjml-react": "^2.0.8",
     "next": "^13.1.6",
-    "next-i18next": "^13.0.3",
+    "next-i18next": "^13.1.4",
     "nodemailer": "^6.9.1",
     "nookies": "^2.5.2",
     "pino": "^8.8.0",
@@ -69,16 +69,16 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-hot-toast": "^2.4.0",
-    "react-i18next": "^12.1.4",
+    "react-i18next": "^12.1.5",
     "react-top-loading-bar": "^2.3.1",
     "reactfire": "^4.2.2",
-    "stripe": "^11.8.0",
+    "stripe": "^11.9.0",
     "swr": "^2.0.3",
     "tailwindcss": "^3.2.4",
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^5.16.1",
+    "@cypress/webpack-preprocessor": "^5.16.2",
     "@next/bundle-analyzer": "^13.1.6",
     "@types/jest": "^29.4.0",
     "@types/mjml-react": "^2.0.6",
@@ -89,14 +89,14 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^12.5.0",
+    "cypress": "^12.5.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.33.0",
     "eslint-config-next": "13.1.6",
     "gray-matter": "4.0.3",
     "firebase-tools": "^11.22.0",
     "mjml": "^4.13.0",
-    "next-sitemap": "^3.1.48",
+    "next-sitemap": "^3.1.49",
     "pino-pretty": "^9.1.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
